--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section>
         <p>Veja alguns dos exercicios que já desenvolvi como estudante da Trybe no meu <a href="https://github.com/raelnogpires/exercicios-trybe" target="_blank">repositório GitHub</a>.</p>
       </section>
-      <h2>Alguns aprendizados deste começo de Trybe:</h2>
+      <h2>Alguns aprendizados deste começo de Trybe</h2>
       <ol id="licoes_aprendidas">
         <li>Unix e SO's que o usam como base.</li>
         <li>Como o Hardware se comunica com o Software através do Kernel.</li>
@@ -28,7 +28,7 @@
         <li>A importância de trabalhar sua saúde mental e inteligência emocional.</li>
         <li>Saber expressar minhas opiniões em equipe.</li>
       </ol>
-      <h2>Aprendizados que desejo ter ao longo do curso:</h2>
+      <h2>Aprendizados que desejo ter ao longo do curso</h2>
       <ul id="licoes_a_aprender">
         <li>JavaScript e React para desenvolvimento Front-end.</li>
         <li>Aprender e melhorar mais a minha inteligência emocional.</li>
@@ -41,10 +41,14 @@
         <li>Construir códigos mais limpos e organizados.</li>
         <li>Aprender a passar meu conhecimento de uma forma mais didática para ajudar outras pessoas sempre que puder.</li>
       </ul>
+      <article>
+        <h2>Meu aprendizado na Trybe</h2>
+        <p>Minhas aulas na Trybe começaram há cerca de duas semanas atrás e desde então pude ver com os meus próprios olhos que tudo oque foi dito sobre essa escola é verdade. O ambiente acolhedor onde todos podem contribuir e expressar suas dúvidas sem medo de julgamentos, a importância que é dada para as soft-skills, a equipe disposta a te ajudar da melhor maneira possível, a rotina extremamente puxada, a densidade do conteúdo, é tudo verdade. Até então, é a experiência mais diferente que já tive na vida como aluno.</p>
+      </article>
     </main>
 
     <footer id="rodape">
-      <p>Página desenvolvida por Rael Nogueira Pires no Projeto [Lessons Learned], 2021.</p>
+      <p>Página desenvolvida por Rael Nogueira Pires no Projeto <b>Lessons Learned</b>, 2021.</p>
     </footer>
   </body>
 </html>
