--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <section class="artigos">
-            <article id="lado-esquerdo">
+            <article class="lado-esquerdo">
                 <h2>Como foi até agora</h2>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem obcaecati consectetur quos
@@ -66,18 +66,15 @@
                     voluptas iste, voluptate consequuntur officiis dolores illo hic dolorem aspernatur enim doloribus
                     ipsam
                     facere adipisci debitis incidunt! Odio sequi vitae accusamus a in animi quos vel, doloremque nobis
-                    quo,
-                    quaerat expedita alias asperiores facere. Qui voluptatum ab voluptatibus, reiciendis ea offi.
+                    quo.
                 </p>
             </article>
 
-            <aside id="lado-direito">
+            <aside class="lado-direito">
                 <h2>Expectativas para o futuro</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos non sed tempora voluptatem asperiores,
-                    quod fugiat dolor perspiciatis, porro quae tempore. Recusandae labore tenetur laudantium molestiae
-                    vel
-                    enim eius id.
+                    quod fugiat dolor perspiciatis, porro quae tempore.
                 </p>
             </aside>
         </section>
