--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
         <h3>Meu aprendizado</h3>
         <p>Entrei na Trybe sem saber nada sobre o mundo da programação (além do que aprendi no curso introdutório), agora estou na segunda semana de curso e tendo muitos aprendizados, desde hard skills, como Unix, Bash, Git, GitHub, HTML e CCS, até softskills, como inteligência emocional, empatia, dentre vários outros que ainda estão por vir.</p>
     </article>
+
+    <section>
+        <aside>
+            <h4>Passagem sobre meu aprendizado</h4>
+            <p>Estou impressionada com como o meu conhecimento aumento em apenas duas semanas de Trybe, a diferença é enorme e estou muito animada pelas próximas semanas e meses!</p>
+        </aside>
+    </section>
     
     <footer id="rodape">
         <a href="https://www.betrybe.com/" target="_blank">Blog da Trybe</a>
