--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1 id="titulo">Lessons Learned - Trybe</h1>
         <nav>
             <ul>
-                <li><a>Home</a></li>
-                <li><a>Login</a></li>
+                <li>Home</li>
+                <li>Login</li>
             </ul>
         </nav>
     </header>
@@ -21,11 +21,11 @@
         <article>
             <img id="minha_foto" src="./myimage.jpg" alt="Minha foto">
             <a href="https://github.com/KevinSena" target="_blank">Kevin Sena</a>
-            <h3>Artigo</h3>
+            <h2>Artigo</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugit saepe modi ea, quis quaerat incidunt vel enim necessitatibus ad? Non molestiae, sapiente veniam facere nostrum temporibus eos? Et, ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum hic similique magni corporis? Fuga quos quo, similique rem fugiat cumque optio molestiae veritatis cupiditate nulla iusto eligendi quia, ducimus error!</p>
         </article>
         <section>
-            <h3>Lições</h3>
+            <h2>Lições</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Git</li>
@@ -53,7 +53,7 @@
         </section>
     </main>
     <aside>
-        <h3>Meu aprendizado</h3>
+        <h2>Meu aprendizado</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id inventore accusamus, cupiditate consequuntur quos praesentium commodi, doloribus harum ad rem veritatis magni odit. Ducimus, eos molestias iusto amet labore quae!</p>
     </aside>
     <footer id="rodape">
