--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <link rel="stylesheet" href="style.css" />
     <title>Lessons Learned SD 16 B</title>
     <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-    <p><a href="https://www.betrybe.com/">Home</a></p>
-    <p><a href="https://app.betrybe.com/course">Login</a></p>
+    <p><a href="https://www.betrybe.com/" target="_blank">Home</a></p>
+    <p><a href="https://app.betrybe.com/course" target="_blank">Login</a></p>
   </header>
   <body>
     <img id="minha_foto" src="foto_fas.jpg" />
-    <p><a href="https://www.linkedin.com/in/fasouzarj">Flávio Alves</a></p>
+    <p>
+      <a href="https://www.linkedin.com/in/fasouzarj" target="_blank"
+        >Flávio Alves</a
+      >
+    </p>
     <nav>
       <table>
         <tr>
@@ -52,7 +56,8 @@
     </nav>
     <footer id="rodape">
       <p>
-        Desenvolvido por <a href="https://github.com/fasouzarj">Flávio Alves</a>
+        Desenvolvido por
+        <a href="https://github.com/fasouzarj" target="_blank">Flávio Alves</a>
       </p>
     </footer>
   </body>
