--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
                 <li>SQL</li>
             </ul>
         </section>
-
-     </main>
+    </main>
+    <footer id="rodape">
+        Todos direitos reservado, Hugo Daniel.
+    </footer>
      
      
  </body>
