requisito07 - Insira pelo menos um link externo na página

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       <li>Unit Tests</li>
     </ul>
     </main>
-    <footer id="rodape">rodape</footer>
+    <section>
+    <nav><a target="_blank" href="https://www.linkedin.com/in/gabriel-augustoo/">Linkedin</a></nav>
+    <nav><a target="_blank" href="https://github.com/gabriel-am12">Github</a></nav>
+    </section>
+    <footer id="rodape">Rodapé</footer>
 </body>
 </html>
