--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
       src="https://media-exp1.licdn.com/dms/image/C4D03AQGNzMBMSt9ARQ/profile-displayphoto-shrink_800_800/0/1628638444292?e=1635379200&v=beta&t=ppkX48-iCDbSTrt333QTNw3CuyHcgXSi_iFDUWnOFJU"
       alt="Jovem preta com cabelo cacheado solto vista de frente">
   </section>
+  <section>
+    <h2>Lições Aprendidas</h2>
+    <ol id="licoes_aprendidas">
+      <li>Conhecer sistemas baseados em Unix</li>
+      <li>Utilizar o Bash</li>
+      <li>Versionar arquivos com Git</li>
+      <li>Utilizar o GitHub</li>
+      <li>Compreender o funcionamento da Internet</li>
+      <li>Estruturar páginas web com HTML</li>
+      <li>Estilizar tags HTML com CSS</li>
+      <li>Posicionar elementos numa página web</li>
+      <li>Utilizar Pseudoclasses de CSS</li>
+      <li>Utilizar HTML semântico para criar páginas web acessíveis</li>
+    </ol>
+  </section>
 </body>
 
 </html>
