correções de erros de id, footer e abertura de link

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </header>
   <main>
     <div>
-      <img class="minha_foto" src="https://ialamov.github.io./images/WhatsApp%20Image%202021-03-02%20at%2015.09.07.jpeg" alt="Foto de perfil de Douglas Ialamov">
-      <a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/">Linkedin Pessoal</a>
+      <img id="minha_foto" src="https://ialamov.github.io./images/WhatsApp%20Image%202021-03-02%20at%2015.09.07.jpeg" alt="Foto de perfil de Douglas Ialamov">
+      <a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/" target="_blank">Linkedin Pessoal</a>
     </div>
     <section>
       <h2>Lições aprendidas</h2>
@@ -44,11 +44,12 @@
         <li>Deployment</li>
       </ul>
     </section>
-    <article>
-      <h3></h3>
-    </article>
+    <aside>
+      <h3>O caminnho até aqui!</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia officia, ex impedit error in non voluptatem, at, quae necessitatibus quis mollitia? Dolore debitis, tenetur expedita saepe possimus quidem quam cum?</p>
+    </aside>
   </main>
-  <footer class="rodape">
+  <footer id="rodape">
     <h4>Produzido por Douglas de Oliveira Ialamov</h4>
   </footer>
 </body>
