--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     </header>
     <main>
         <img id="minha_foto" src="https://media-exp1.licdn.com/dms/image/C4D03AQF7fz0gN2Sz3w/profile-displayphoto-shrink_800_800/0/1616434514508?e=1635379200&v=beta&t=E0P-UxT6X47WBe4B0BQR7gu-kaAvUzxfNZSUV968Fzg" alt="Fundo bege. Mulher cabelo vermelho, pele clara e blusa preta">
+        <ol id="licoes_aprendidas">
+            <li>Unix & Bash</li>
+            <li>O que é o Git & GitHub</li>
+            <li>Entendendo como a internet funciona</li>
+            <li>HTML&CSS: Estruturas de página</li>
+            <li>HTML&CSS: Primeiros passos em CSS</li>
+            <li>HTML&CSS: Seletores e posicionamento</li>
+            <li>HTML Semântico</li>
+            <li>Introdução a habilidades socioemocionais</li>
+            <li>Como ter empatia</li>
+            <li>Entendendo as emoções</li>
+        </ol>
     </main>
 </body>
 
