--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<!-- dica inserir lingua fornecida pelo codesniffer -->
+<html lang="pt">
     <head>
-        <!-- linhas 5 a 7 retiradas do exemplo feito pelo tio jack -->
+        <!-- dica fornecida pelo codesniffer -->
+        <title>Lessons Learned</title>
+        <!-- proximas 3 linhas retiradas do exemplo feito pelo tio jack -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +42,7 @@
             <li>m9</li>
             <li>m10</li>
         </ul>
-        <a href="https://www.google.com" target="_blank">pesquisar</a>
+        <a href="https://www.google.com" target="_blank">pesquisar (opens new window)</a>
         <article>
             Ate a data da realizacao do projeto lessons learned, foi aprendido conteudo relacionado a html, css, git e github, assim como o funcionamento da janela de comandos e principais comandos. A parte de organizacao utilizando o git e algo que tenho utilizado bastante, dentro e fora da trybe, um recursso muito util. O conhecimento adquirido relacionado a html eu pretendo utiliza-lo em um projeto fora da trybe logo mais.
         </article>
