--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1 id="titulo">Lições Aprendidas - TRYBE!</h1>
     </header>
     <img id="minha_foto" src="fotoperfil/33186865_1963908880320981_5776167367381876736_n.jpg" alt="">
+    
     <ol id="licoes_aprendidas">Lições Aprendidas
      <li>Unix</li>
      <li>Git</li>
@@ -36,6 +37,7 @@
         <li>CSS Responsive</li>
         <li>Inspect</li>
     </ul>
+    <footer id="rodape">Todos os direitos reservados,Diego</footer>
 
 </body>
 </html>
