--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       <h1 id="titulo">Lições Aprendidas - Trybe</h1>
   </header>
 
+  <nav>
+    <ul>
+      <li>Lições aprendidas</li>
+      <li>Lições a aprender</li>
+      <li>Artigo</li>
+    </ul>
+  </nav>
+
   <main>
     <img id="minha_foto" src="minha_foto.jpg" alt="Mulher olhando para a frente com um leve sorriso">
 
