--- a/index.html
+++ b/index.html
@@ -14,5 +14,17 @@
   <figure>
     <img id="minha_foto" img src="/img/pic-perfil-light.png" alt="Minha Foto">
   </figure>
+  <ol id="licoes_aprendidas">
+    <li>Unix</li>
+    <li>Git e Github</li>
+    <li>Empatia</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>HTML Semântico</li>
+    <li>Box Model</li>
+    <li>Classes e ID</li>
+    <li>Pseudoclasses</li>
+    <li>Elementos Block e Inlkine</li>
+  </ol>
 </body>
 </html>
