--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
     </div>
     <nav>
-    <a href="https://oieusouopi.github.io/" target="_blank">Rafael Santos</a>
+    <a id="Meu_nome" href="https://oieusouopi.github.io/" target="_blank">Rafael Santos</a>
     </nav>
     <section>
-    <h2>Lições</h2>
+    <h2>1 -Lições</h2>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
@@ -46,7 +46,7 @@
     </ul>
     </section>
     <article>
-        <h2>Aprendizado</h2>
+        <h2>2 - Aprendizado</h2>
         <p>Na trybe eu estou tendo uma experiência unica de aprendizado<br>
         aumentando meu conhecimento em desenvolvimento na web e como <br>
         desenvolvedor visando futuramente ter uma melhor carreira e ser<br>
@@ -55,13 +55,13 @@
         na qual eu estou trabalhando naquela empresa.</p>
     </article>
     <aside>
-        <h2>Um Momento que ocorreu durante meu aprendizado</h2>
+        <h2>3 -Um Momento que ocorreu durante meu aprendizado</h2>
         <p>Os momentos de softskills melhoram bastante a interação entre os alunos<br>
         e um dos momentos que mais me impactou foi o de simpatia e empatia que trouxe <br>
         a diferença dos dois.</p>
     </aside>
     <div>
-    <h2>Périodo de aprendizado do curso</h2>
+    <h2>4 - Périodo de aprendizado do curso</h2>
     <table>
         <tr>
             <th>inicio</th>
@@ -73,7 +73,7 @@
         </tr>
     </table>
     </div>
-    
+
     <footer id="rodape"></footer>
 </body>
 </html>
