--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
                     <li>Empatia</li>
                 </ol>
             </section>
+            <section id="secao">
+                <h3>Lições a aprender:</h3>
+                <ul id="licoes_a_aprender">
+                    <li>Java</li>
+                    <li>DOM</li>
+                    <li>Forms</li>
+                    <li>CSS Responsive</li>
+                    <li>ES6</li>
+                    <li>HOF</li>
+                    <li>Unit Tests</li>
+                    <li>React</li>
+                    <li>Node</li>
+                    <li>SQL</li>
+                </ol>
+            </section>
         </section>
     </main>
 </body>
