Todos requisitos ok

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <td class="tabela1">Jogos/Séries/Animes</td>
                 </tr>
             </table>
+            <a href="https://www.linkedin.com/in/felipesanchesm/" target="_blank">Meu Linkedin (open in new window)</a>
         </section>
         <section>
             <ol id="licoes_aprendidas">
@@ -64,19 +65,19 @@
                 <li>SQL</li>
             </ul>
         </section>
-        <article>
-            <p>
+        <article  class="lado-esquerdo">
+            <p class="lado-esquerdo"><br>
                 Essas semanas de curso foram recheadas de conteúdos novos, começou devagar com explicações básicas sobre o sistema Unix, sobre o que é a internet, o que seria uma página web, até o momento em que chegou a explicação do Git,GitHub,HTML e CSS, após isso que as coisas começaram a melhorar, pois deu para ver em tempo real o aprendizado ser absorvido.
             </p>
             </article>
-            <aside>
-                <p>
+            <aside class="aside lado-direito">
+                <p class="aside lado-direito"><br><br><br>
                     Uma das melhores decisões que eu tive foi migrar de engenharia química para programação, não tenho nenhum arrependimento, muito pelo contrário, estou super ansioso para aprender mais e mais.
 
                 </p>
             </aside>
     </main>
-    <a href="https://www.linkedin.com/in/felipesanchesm/" target="_blank">Meu Linkedin (open in new window)</a>
+
     <footer id="rodape">
         <hr>
         <p>Todos Os Direitos Reservados, Felipe Sanches Meirelles</p>
