--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
     
     <main>
         <img id="minha_foto" src="fotoatual.jpeg" alt="foto atual">
-        <nav>
-            <p><a href="https://github.com/AirtonL" target="_blank">GitHub</a></p>
-        </nav>
-
-        <section>
+        <section class="ajuste">
             <h2>Lições</h2>     
             <ol id="licoes_aprendidas">
                 <li>Git - Git Hub</li>
@@ -46,6 +42,11 @@
                 <li>Melhorar como pessoa</li>
             </ul>
         </section>
+
+        <nav>
+            <p><a href="https://github.com/AirtonL" target="_blank">GitHub</a></p>
+        </nav>
+
         <section>
             <article class="lado-esquerdo">
                 <h3>Meu aprendizado</h4>
