req 03 - ok | req 04 e 05 ~

--- a/index.html
+++ b/index.html
@@ -8,16 +8,55 @@
 </head>
 <body>
     <!-- Requisito 01 - OK -->
-    <!-- Requisito 02 - -->
+    <!-- Requisito 02 - OK -->
     <div class="barra-superior">
         <header id="cabecalho">
             <h1 id="titulo">Barra Superior</h1>
         </header>
     </div>
 
-    <!-- Requisito 03 -  -->
-    <img id="minha_foto" src="pp.jpg" alt="minha foto">
-    
+    <main>
+        <!-- Requisito 03 - OK -->
+        <div class="foto-perfil">
+            <img id="minha_foto" src="pp.jpg" alt="minha foto">
+        </div>
+
+        <!-- Requisito 04 -  -->
+        <div class="listas">
+            <section class="lado-esquerdo">
+                <h3>Lições aprendidas:</h3>
+                <ol id="licoes_aprendidas">
+                    <li>paasdf</li>
+                    <li>asdfasdf</li>
+                    <li>asdfasdf</li>
+                    <li>paasdf</li>
+                    <li>asdfasdf</li>
+                    <li>asdfasdf</li>
+                    <li>paasdf</li>
+                    <li>asdfasdf</li>
+                    <li>asdfasdf</li>
+                    <li>wieruov</li>
+                </ol>
+            </section>
+            <!-- Requisito 05 -  -->
+            <section class="lado-direito">
+                <h3>Lições a aprender:</h3>
+                <ol id="licoes_a_aprender">
+                    <li>paasdf</li>
+                    <li>asdfasdf</li>
+                    <li>asdfasdf</li>
+                    <li>paasdf</li>
+                    <li>asdfasdf</li>
+                    <li>asdfasdf</li>
+                    <li>asdfasdf</li>
+                    <li>paasdf</li>
+                    <li>asdfasdf</li>
+                    <li>wieruov</li>
+                </ol>
+
+            </section>
+        </div>
+    </main>
 </body>
 </html>
 
