--- a/index.html
+++ b/index.html
@@ -22,10 +22,21 @@
       </section>
     </header>
   <main>
-    <div>
-      <img id="minha_foto" src="airton.jpg" alt="minha foto">
+    <div class="lista">
+      <section>
+        <img id="minha_foto" src="airton.jpg" alt="minha foto">
+      </section>
+      <section>
+        <article id="article">
+          <h2>Minha <sapn class="word">Jornada</sapn></h2>
+          <p>"Toda <sapn class="word">caminhada</sapn> começa com o <sapn class="word">primeiro paso</sapn>". E a <sapn class="word">Trybe</sapn> é o meu primeiro passo para me tornar um programador! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.</p>
+        </article>
+        <aside id="aside">
+          <h2>Meus <sapn class="word">Conhecimentos</sapn></h2>
+          <p>"Toda <sapn class="word">caminhada</sapn> começa com o <sapn class="word">primeiro paso</sapn>". E a <sapn class="word">Trybe</sapn> é o meu primeiro passo para me tornar um programador! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</p>
+        </aside>
+      </section>
     </div>
-
 
 
 
