tentativa de posicionamento

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
           como funciona a internet, como estruturar uma pagina com html e<br>
            como estilizá-la com css.</aside></section>
 
-    <footer id="rodape"></footer>
-
     <nav class="margem"><h2><a href="https://github.com/anaualima" target="_blank">Conheça meu GitHub</a></h2></nav>
+    
+    <footer id="rodape">Todos os direitos reservados a Alissandra Lima</footer>
 
   </body>
 
