--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
             <li>Como ter empatia</li>
             <li>Entendendo as emoções</li>
         </ol>
+
+        <ul id="licoes_a_aprender">
+            <li>Flexbox</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Python</li>
+            <li>Algoritmos</li>
+            <li>Comunicação</li>
+            <li>Colaboração</li>
+            <li>Pensamento crítico</li>
+            <li>Criatividade</li>
+            <li>Liderança</li>
+        </ul>
     </main>
 </body>
 
