--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+
     <header id="cabecalho">
         <h1 id="titulo">Project lessons learned</h1>
     </header>
-    <main>
+
+    <main class="lado-esquerdo">
+        <img id="minha_foto" src="imagens/fiora.jpg" alt="Fiora, a duelista">
         <article>
-            <img id="minha_foto" src="imagens/fiora.jpg" alt="Fiora, a duelista">
             <ol id="licoes_aprendidas">
                 <li>HTMl</li>
                 <li>CSS</li>
@@ -38,18 +40,23 @@
             </ul>
         </article>
     </main>
-    <aside>
-        <section>
+
+    <aside class="lado-direito">
+        <section >
             <h2>Meu Aprendizado</h2>
-        </section>
         <p>
-            Enquanto aprendo desenvolvimento web busco aprender mais sobre a linguagem Unix e gerenciamento de pacotes, tenho como meta realizar e usar o sistema Arch Linux
+            Enquanto aprendo desenvolvimento web busco aprender mais sobre a linguagem Unix e gerenciamento de pacotes, tenho como meta realizar a instalação e usar o sistema Arch Linux
         </p>
+        </section>
     </aside>
+
     <footer id="rodape">
-        <nav>
-            <a href="https://github.com/irbds" target="_blank">Meu GitHub</a>
-        </nav>
+        <table>
+            <nav>
+                <a href="https://github.com/irbds" target="_blank">Meu GitHub</a>
+            </nav>
+        </table>
     </footer>
+
 </body>
 </html> 
