--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li>Home</li>
             <li>Login</li>
-            <li><a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN</a></li>
+            <li><a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN - New window</a></li>
         </ul>
     </nav>
 
@@ -30,7 +30,7 @@
         <img src="me.jpeg" alt="photo of matheus nugas" width="125px" id="minha_foto">
         <div class="licoes">
             <ol id="licoes_aprendidas">
-                <h4>Lições Aprendidas</h4>
+                <h2>Lições Aprendidas</h2>
                 <li>Soft skills</li>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -43,7 +43,7 @@
                 <li>NPM</li>
             </ol>
             <ul id="licoes_a_aprender">
-                <h4>Lições a Aprender</h4>
+                <h2>Lições a Aprender</h2>
                 <li>Redux</li>
                 <li>JavaScript</li>
                 <li>React</li>
