Adiciona barra superior

--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <title>lessons learned</title>
+    <title>Lessons Learned | Leandro Silva | Trybe | T16-B</title>
     <link rel="stylesheet" href="style.css">
     
   </head>
   <body>
-      <p>parágrafo</p>
-
+    <div id="cabecalho">
+    	<h1 id="titulo">Lessons Learned</h1>
+		</div>
+    
+		
 
   </body>
 </html>
