--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-<head>    
-    <meta charset="pt-br">
-    <title> 
-        Helder Emanuel lessons-learned
-    </title>  
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+<!DOCTYPE html>
+<html>
+    <head>    
+        <meta charset="pt-br">
+        <title> 
+            Helder Emanuel lessons-learned
+        </title>  
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div id="cabecalho"> 
+            <h1 id ="titulo"> lições aprendidas trybe </h1>
+        </div> 
+        <div id="informacoes"></div>
+            <div id="bloco-da-imagem"> 
+                <img id="minha_foto" src="perfil.jpg" alt="">
+            </div>
+            <h2 id="titulo_das_listas">lições aprendidas</h2>
+            <ol id="licoes_aprendidas">
+                <li>Profissionalismo;</li>
+                <li>Empatia;</li>
+                <li>respeito;</li>
+                <li>html básico</li>
+                <li>css básico</li>
+                <li>Git</li>
+                <li>unix</li>
+                <li>Zoom</li>
+                <li>Slack</li>
+                <li>Semantic html</li>
+        </div>
+        </ol>
+    </body>
+</html>
