oitavo requisito concluido

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <li>Python</li>
       </ul>
     </section>
+
+    <article class="artigo">
+      <p>Menos de três semanas na Trybe já me trouxeram inúmeros aprendizados, desde assuntos onde eu já conhecia, e me surpreendi ao ser apresentado a novas formas de trabalhar com determinadas ferramentas, até assuntos que eu nunca vi. Está sendo tão prático aprender com a didática que é passada, que acabo enfrentando pouca dificuldade para entender os assuntos passados até o momento.</p>
+    </article>
   </main>
   <footer id="rodape">
     <a class="link_redes_sociais" href="https://github.com/orlandodantas" target="_blank"><img src="img/github.png" alt="gatinho do GitHub"></a>
