--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <header>
     <div id="cabecalho">
       <h1 id="titulo">Lições Aprendidas</h1>
+
     </div>
     <div>
       <img id="minha_foto" src="MatheusMoura.png" alt="matheus moura">
@@ -22,7 +23,7 @@
     </div>
   </header>
 
-  <ol id="licoes_a_aprender">
+  <ol id="licoes_aprendidas">
     <li>Git</li>
     <li>GitHub</li>
     <li>Unix</li>
@@ -34,7 +35,7 @@
     <li>Shell</li>
     <li>Fundamentos do Desenvolvimento Web</li>
   </ol>
-  <ol id="licoes_a_aprender">
+  <ul id="licoes_a_aprender">
     <li>Java Script</li>
     <li>Array e Loop</li>
     <li>Logica de programação</li>
@@ -45,7 +46,7 @@
     <li>Css Flexbox</li>
     <li>Jest</li>
     <li>React</li>
-  </ol>
+  </ul>
   <article>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aut voluptatem, a officia quos ut quas, facere esse
     molestias, reiciendis tempore quae adipisci? Possimus, quia aut aperiam fuga perferendis velit.
