--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <section>
     <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
+        <li><strong>JavaScript</strong></li>
         <li>DOM</li>
         <li>Web Storage</li>
         <li>Forms</li>
@@ -41,7 +41,7 @@
         <li>ES6</li>
         <li>React</li>
         <li>Redux</li>
-        <li>Context API</li>
+        <li><stron>Context API</stron></li>
         <li>SQL</li>
     </ul>
     </section>
