--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
   <header id="cabecalho">
     <h1 class="text-center" id="titulo">Lessons Learned</h1>
+    <nav>
+      <a href="https://marcioecom.github.io/">Portifolio</a>
+      <a href="http://github.com/marcioecom">Github</a>
+    </nav>
   </header>
   <div class="container">
     <img src="foto.jpg" alt="uma foto minha" id="minha_foto">
