--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <li>dddd</li>
     </ul>
 
-    <a href="https://www.betrybe.com/" target="_blank"></a>
+    <p>Conheça outros projetos desenvolvidos por Renata Magno no <a href="https://www.betrybe.com/" target="_blank">GitHub</a></p>
 
     <article>
       <title>
@@ -63,12 +63,10 @@
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
       </aside>
     </section>
-
-
   </main>
 
   <footer id="rodape">
-
   </footer>
+  
 </body>
 </html>
