Todos os requisitos cumpridos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         alt="Foto de rosto do autor da página"
         id="minha_foto"
       />
-      <section>
+      <br>
+      <section class="lado-esquerdo">
         <ol id="licoes_aprendidas">
           <li>HTML</li>
           <li>CSS</li>
@@ -48,7 +49,7 @@
           <li>CSS Responsivo</li>
         </ul>
       </section>
-      <article>
+      <article class="lado-direito">
         O aprendizado na Trybe consegue ser, ao mesmo tempo, extenuante e
         satisfatório. O esforço em absorver uma grande quantidade de
         conhecimento é sempre bem recompensada por ver seu código funcionando na
@@ -58,14 +59,35 @@
         perceptível que nós vamos aprender MUITA coisa, e estaremos mais que
         preparados para entrar no mercado de trabalho após o curso!
       </article>
+      <br>
+
+      <table>
+        <tr>
+          <th>Fundamentos do Desenvolvimento Web</th>
+          <th>Desenvolvimento Front-end</th>
+          <th>Desenvolvimento Back-end</th>
+          <th>Ciência da Computação</th>
+        </tr>
+        <tr>
+          <td>30%</td>
+          <td>0%</td>
+          <td>0%</td>
+          <td>0%</td>
+        </tr>
+      </table>
+
       <aside>
+          <h2>Comentários sobre o curso</h2>
         Pessoalmente, eu já havia tentado aprender programação sozinho algumas vezes, no entanto a falta de apoio para tirar dúvidas sempre atrapalhava. <br>
         Aqui, basta uma mensagem no Slack e toda a comunidade vem ajudar! É bem gratificante!
       </aside><br><br><br>
       <a href="https://www.w3schools.com/" target="_blank"
         >Maiores referências sobre HTML, acesse a página da W3Schools (em
         inglês)</a
-      >
+      > <br>
+      <a href="https://github.com/lucasoliveira722" target="_blank"
+      >GitHub do criador da página</a
+    >
     </main>
     <footer id="rodape">Todos os direitos reservados, Lucas Oliveira</footer>
   </body>
