--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <article class="article">
+    <section class="listas">
         <div class="lista_ordenada lado-esquerdo">
             <h2>Lições aprendidas</h2>
             <ol id="licoes_aprendidas">
@@ -56,6 +56,14 @@
                 <li>Algoritmos</li>
             </ul>
         </div>
+    </section>
+
+    <article>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam aut earum sint laborum velit quos ducimus
+            mollitia. Illum neque natus, quod vel maiores debitis a laudantium cum, quibusdam, ipsam rem?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptatibus autem eaque quia consectetur!
+            Sunt facilis est nesciunt, voluptate temporibus ipsa sed voluptatum, quia, quis nobis enim blanditiis
+            officia? Eius?</p>
     </article>
 
     <footer id="rodape">
