--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <main>
         <img id="minha_foto" src="https://media-exp1.licdn.com/dms/image/C4D03AQF7fz0gN2Sz3w/profile-displayphoto-shrink_800_800/0/1616434514508?e=1635379200&v=beta&t=E0P-UxT6X47WBe4B0BQR7gu-kaAvUzxfNZSUV968Fzg" alt="Fundo bege. Mulher cabelo vermelho, pele clara e blusa preta">
+        <section>
         <ol id="licoes_aprendidas">
             <li>Unix & Bash</li>
             <li>O que é o Git & GitHub</li>
@@ -27,7 +28,8 @@
             <li>Como ter empatia</li>
             <li>Entendendo as emoções</li>
         </ol>
-
+    </section>
+    <section>
         <ul id="licoes_a_aprender">
             <li>Flexbox</li>
             <li>JavaScript</li>
@@ -40,7 +42,9 @@
             <li>Criatividade</li>
             <li>Liderança</li>
         </ul>
+    </section>
     </main>
+    <footer id="rodape"> <p>Elaborado por: <a href="https://www.linkedin.com/in/renata-domingues-369358bb/" target="_blank"> Renata Domingues</a><br> Atividade proposta pela <a href="https://www.betrybe.com/" target="_blank">Trybe</a></p></footer>
 </body>
 
 </html>
