--- a/index.html
+++ b/index.html
@@ -14,17 +14,31 @@
   <figure>
     <img id="minha_foto" img src="/img/pic-perfil-light.png" alt="Minha Foto">
   </figure>
-  <ol id="licoes_aprendidas">
-    <li>Unix</li>
-    <li>Git e Github</li>
-    <li>Empatia</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>HTML Semântico</li>
-    <li>Box Model</li>
-    <li>Classes e ID</li>
-    <li>Pseudoclasses</li>
-    <li>Elementos Block e Inlkine</li>
-  </ol>
+  <section>
+    <ol id="licoes_aprendidas">
+      <li>Unix</li>
+      <li>Git e Github</li>
+      <li>Empatia</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>HTML Semântico</li>
+      <li>Box Model</li>
+      <li>Classes e ID</li>
+      <li>Pseudoclasses</li>
+      <li>Elementos Block e Inlkine</li>
+    </ol>
+    <ul id="licoes_a_aprender">
+      <li>Java Script</li>
+      <li>DOM</li>
+      <li>CSS Responsivo</li>
+      <li>ES6</li>
+      <li>React</li>
+      <li>NodeJS</li>
+      <li>SQL</li>
+      <li>Rest</li>
+      <li>MongoDB</li>
+      <li>Python</li>
+    </ul>
+  </section>
 </body>
 </html>
