--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1 id="titulo">Trabalho do Brunão</h1>
     </header>
     <main id="main">
-        <section>
+        <section id="secao">
             <img src="imagens/eu.jpg" alt="eu" id="minha_foto">
-            <section id="secao">
+            <section id="secao_list">
                 <h3>Lições aprendidas:</h3>
                 <ol id="licoes_aprendidas">
                     <li>Unix</li>
@@ -29,7 +29,7 @@
                     <li>Empatia</li>
                 </ol>
             </section>
-            <section id="secao">
+            <section id="secao_list">
                 <h3>Lições a aprender:</h3>
                 <ul id="licoes_a_aprender">
                     <li>Java</li>
@@ -46,5 +46,6 @@
             </section>
         </section>
     </main>
+    <footer id="rodape">Chulé</footer>
 </body>
 </html>
