--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       </article>
     </main>
 
+    <aside>
+      <h2>Uma passagem sobre meu aprendizado</h2>
+      <p>Um fato engraçado que aconteceu sexta-feira passada (20/08) foi no fechamento do dia. Estava com a cabeça a milhão e acabei tentando entrar no Zoom de fechamento 10 minutos antes do horário, é o clima de sextou!</p>
+    </aside>
+
     <footer id="rodape">
       <p>Página desenvolvida por Rael Nogueira Pires no Projeto <b>Lessons Learned</b>, 2021.</p>
     </footer>
