Requisito 13 (bonus) cumprido

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header id="cabecalho">
-      <h1 id="titulo">Título</h1>
+      <h1 id="titulo">Lições Aprendidas na Trybe</h1>
       <nav>
         <ul id="indice">
-          <li><a href="#cabecalho">Início</a></li>
+          <li><a href="#inicio">Início</a></li>
           <li><a href="#licoes_aprendidas">Lições aprendidas</a></li>
           <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
           <li><a href="#artigo_principal">Minha jornada</a></li>
@@ -23,7 +23,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main id="inicio">
       <img
         src="profile-photo.jpg"
         alt="Minha foto"
@@ -85,9 +85,9 @@
           <tr>
             <td>Sintaxe:</td>
             <td>
-              <code>
-                apropos [-dalv?V] [-e|-w|-r] [-s lista] [-m sistema[,...]] [-M
-                caminho] [-L localidade] [-C arquivo] palavra-chave ...
+              <code
+                >apropos [-dalv?V] [-e|-w|-r] [-s lista] [-m sistema[,...]]<br />
+                [-M caminho] [-L localidade] [-C arquivo] palavra-chave ...
               </code>
             </td>
           </tr>
