--- a/index.html
+++ b/index.html
@@ -12,43 +12,47 @@
     <h1 id="titulo">[Lucca Neiva] Lessons Learned</h1>
     <nav>
       <ul>
-        <li>Foto</li>
-        <li>Lições aprendidas</li>
-        <li>Lições a aprender</li>
-        <li>SObre meu aprendizado</li>
+        <li>Home</li>
+        <li>Sobre</li>
       </ul>
     </nav>
   </header>
   <main>
     <img src="./rsz_1rsz_fotominha.jpg" alt="UMa foto minha com fundo vermelho e cabelo preso." id="minha_foto">
-    <div>
-      <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Shell</li>
-        <li>Bash</li>
-        <li>Git</li>
-        <li>Github</li>
-        <li>Internet e seu funcionamento</li>
-        <li>HTML</li>
-        <li>HTML Semântico</li>
-        <li>CSS</li>
-        <li>Slack</li>
-      </ol>
-    </div>
-    <div>
-      <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>Lógica de Programação</li>
-        <li>DOM</li>
-        <li>Events</li>
-        <li>Web Storage</li>
-        <li>Formulários HTML e CSS</li>
-        <li>Jest</li>
-        <li>Flexbox</li>
-        <li>High Order Functions</li>
-        <li>JavaScript ES6</li>
-      </ul>
-    </div>
+    <section class="licoes">
+      <table>
+        <tr>
+          <th>Lições aprendidas</th>
+          <th>Lições a aprender</th>
+        </tr>
+        <tr>
+          <td><ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Shell</li>
+            <li>Bash</li>
+            <li>Git</li>
+            <li>Github</li>
+            <li>Internet e seu funcionamento</li>
+            <li>HTML</li>
+            <li>HTML Semântico</li>
+            <li>CSS</li>
+            <li>Slack</li>
+          </ol></td>
+          <td><ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>Lógica de Programação</li>
+            <li>DOM</li>
+            <li>Events</li>
+            <li>Web Storage</li>
+            <li>Formulários HTML e CSS</li>
+            <li>Jest</li>
+            <li>Flexbox</li>
+            <li>High Order Functions</li>
+            <li>JavaScript ES6</li>
+          </ul></td>
+        </tr>
+      </table>
+    </section>
     <article>
       <section>
         <h2>Sobre meu aprendizado</h2>
