Requisitos Bonus Adicionados

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <nav> 
-            <a href="https://www.chess.com/member/windowstuck">site bala de xadrez x1 bpra</a>
+            <a id="sitebala" href="https://www.chess.com/member/windowstuck">SITE DE XADREZ</a>
         </nav>
          
          <article>
@@ -62,6 +62,23 @@
             Mauris a diam maecenas sed. Curabitur gravida arcu ac tortor dignissim convallis aenean et tortor. Lectus quam id leo in vitae turpis massa sed elementum. 
             Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a. t.</p>
          </section>
+
+         <table>
+             <tr>
+                 <th>
+                     Lorem ipsum
+                     Lorem ipsum
+                     Lorem ipsum
+                 </th>
+             </tr>
+             <tr>
+                 <td>
+                    Lorem ipsum
+                    Lorem ipsum
+                    Lorem ipsum
+                 </td>
+             </tr>
+         </table>
 
         <footer id="rodape">
           <a href="https://www.chess.com/member/windowstuck" target="_blank"> perfil no chess.com do pai vamo tirar x1 </a>
