--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
             <section>
                 <img id="minha_foto" src="pp.jpeg" alt="Uma foto minha andando de bicicleta na serra da prainha">
             </section>
+            <section>
+                <ol id="licoes_aprendidas">
+                    <h2 id="titulo-licoes">Lições aprendidas:</h2>
+                    <li>CSS</li>
+                    <li>Empatia</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>HTML</li>
+                    <li>HTML Semântico</li>
+                    <li>Internet</li>
+                    <li>Slack</li>
+                    <li>Unix & Bash</li>
+                    <li>Zoom</li>
+                </ol>
+            </section>
         </article>
     </main>
 </body>
