--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width" />
 <link rel="stylesheet" href="style.css">
-
+<title>Project Lessons Learned</title>
 </head>
 <body>
   <header id="cabecalho">
@@ -17,8 +17,8 @@
           </ul>
     </nav>
   </header>
-  <section>
   <img id="minha_foto" src="fotos/foto.portfolio.jpeg" alt="foto de perfil da Millene Galetti-mulher com cabelo longo,cor castanho,óculos de grau,blusa preta">
+  <section>
 <ol id="licoes_aprendidas">
   <li>Unix</li>
   <li>Git</li>
@@ -52,7 +52,7 @@
 </aside>
 <h2 id="contato">Contatos</h2>
 <a href="https://github.com/MilleneGalettiAcosta" target="_blank">Meu Github</a><br>
-<a href="https://www.linkedin.com/in/millene-galetti-acosta-7a0110202/" target="_blank">Linkedin</a>
+<a href="https://www.linkedin.com/in/millene-galetti-acosta-7a0110202/" target="_blank">Meu Linkedin</a>
 <footer id="rodape">Todos os direitos reservados,Millene Galetti</footer>
 </body>
 </html>
