Decimo e decimo primeiro requisitos

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Primeiro projeto</h1>
+        <nav>
+            <a href="http://127.0.0.1:5500/index.html" title="Página inicial">Home</a>
+        </nav>
     </header>
     <img id="minha_foto" src="image/IMG_7173.JPG" alt="Cleiton Ribeiro social">
-    <section>
+    <section class="lista_de_licoes">
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
@@ -39,15 +42,17 @@
         </ul>
     </section>
     <article>
-        <p>O primeiro assunto que foi abordado no curso de Desenvolvimento Web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank" rel="noreferrer">Trybe</a> foi sobre os sistemas baseados em Unix. No primeiro momento senti que nunca iria conseguir entender o conteúdo, mas com o passar do tempo, controlei a ansiedade e compreendi aos poucos que tudo tem um sentido. O que me ajudou bastante foi o momento em que pratiquei as navegações e configurações no terminal do Linux.</p>
+        <section>
+            <p>O primeiro assunto que foi abordado no curso de Desenvolvimento Web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank" rel="noreferrer" title="Site da Trybe">Trybe</a> foi sobre os sistemas baseados em Unix. No primeiro momento senti que nunca iria conseguir entender o conteúdo, mas com o passar do tempo, controlei a ansiedade e compreendi aos poucos que tudo tem um sentido. O que me ajudou bastante foi o momento em que pratiquei as navegações e configurações no terminal do Linux.</p>
+        </section>
         <section>
             <aside id="meu_aprendizado">
-                As aulas na <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer">Trybe</a> não são fáceis. Depois da minha primeira semana, fui capaz de perceber que apenas o horário normal de aula não seria o suficientes, apesar das aulas serem bem didáticas.
+                As aulas na <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer" title="Site da Trybe">Trybe</a> não são fáceis. Depois da minha primeira semana, fui capaz de perceber que apenas o horário normal de aula não seria o suficientes, apesar das aulas serem bem didáticas.
             </aside>
         </section>
     </article>
     <footer id="rodape">
-        <p>Página criada com a intenção de praticar o que estou aprendendo enquanto um <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer">Tryber</a>.</p>
+        <p>Página criada com a intenção de praticar o que estou aprendendo enquanto um <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer" title="Site da Trybe">Tryber</a>.</p>
     </footer>
 
 </body>
