--- a/index.html
+++ b/index.html
@@ -79,6 +79,34 @@
             </aside>
         </section>
 
+        <table border="1">
+            <tr>
+                <td>Front End</td>
+                <td>Back End</td>
+                <td>Soft Skills</td>
+            </tr>
+            <tr>
+                <td>HTML</td>
+                <td>Node</td>
+                <td>Empatia</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>Python</td>
+                <td>Controle emocional</td>
+            </tr>
+            <tr>
+                <td>JavaScript</td>
+                <td>MongoDB</td>
+                <td>Resiliência</td>
+            </tr>
+            <tr>
+                <td>React</td>
+                <td>MySQL</td>
+                <td>Autogestão</td>
+            </tr>
+        </table>
+
     </main>
 
     <footer id="rodape">
